# blog

./: .envrc  .taplo.toml  Cargo.toml  flake.nix  fly.toml  index.html  justfile  rustfmt.toml  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
app/: Cargo.toml
app/src/: error_template.rs  lib.rs  markdown.rs  posts.rs
content/: homepage.md
content/posts/: a-new-job-scheduler.md  a-new-rust-job-runner.md  a-new-tikv.md  an-experiment-in-reactivity.md  building-this-blog.md  fully-procedural-interactions.md  jsonp-who-asked.md  strongly-typed-ids-in-surrealdb.md
crates/blog/: Cargo.toml
crates/blog/src/: about_page.rs  analytics.rs  app_state.rs  ctx.rs  feed.rs  home_page.rs  main.rs  markdown.rs  page_wrapper.rs  post_page.rs  posts.rs  setup_tracing.rs  signals.rs  test_markup.html  test_page.rs  tidbit_page.rs
crates/blog/src/posts/: highlighter.rs
crates/site-app/: Cargo.toml
crates/site-app/src/: lib.rs  markdown.rs  posts.rs  rose-pine.tmTheme
crates/site-app/style/: fonts.css  main.css  main.scss
crates/site-app/style/tailwind/: tailwind.config.js
crates/site-frontend/src/: lib.rs
crates/site-server/: Cargo.toml
crates/site-server/src/: fileserv.rs  main.rs
frontend/src/: lib.rs
posts/: absurd-plan.md  duckduckgo-feeling-lucky.md  flock-friends-migration.md  llm-speak-heuristics.md  llm-speak-register.md
public/fonts/iosevka_term/: iosevka_term.css
server/src/: fileserv.rs  main.rs
src/: main.rs
style/: iosevka_term.css  main.css  main.scss
style/fonts/: ibm_plex_serif.css  noto_serif.css  roboto.css
tidbits/: looking-at-clocks.md
