[workspace]
resolver = "2"
members = ["crates/*"]

# need to be applied only to wasm build
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly", "experimental-islands"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6", features = ["experimental-islands"] }

axum = "0.7.4"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
console_log = "1"
http = "1"
log = "0.4.20"
serde = { version = "1", features = ["derive"] }
simple_logger = "4.2.0"
thiserror = "1"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
wasm-bindgen = "=0.2.96"
pulldown-cmark = "0.9"


# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "site"

# we turn this on for the release but keep it off in dev
# https://github.com/leptos-rs/cargo-leptos/issues/271
hash-files = false

bin-package = "site-server"
lib-package = "site-frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

style-file = "crates/site-app/style/main.css"
assets-dir = "crates/site-app/public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"

tailwind-input-file = "crates/site-app/style/main.css"
tailwind-config-file = "crates/site-app/style/tailwind/tailwind.config.js"

# set by cargo-leptos
watch = false
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"
