[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
arborium = { version = "2.16.0", features = [
  "lang-rust",
  "lang-markdown",
  "lang-bash",
  "lang-html",
  "lang-toml",
] }
axum = { version = "0.8", features = [ "http2", "macros" ] }
columbo = { version = "0.2" }
const_base = "0.2"
const_format = "0.2"
css-minify-macro = { git = "https://github.com/rambit-systems/rambit" }
http-body-util = { version = "0.1" }
maud = { version = "0.27" }
miette = { version = "7.6", features = [ "fancy" ] }
pulldown-cmark = { version = "0.13", default-features = false, features = [ "html" ] }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "rt-multi-thread", "signal" ] }
toml = "0.8"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
  "compression-full",
  "fs",
  "map-request-body",
  "map-response-body",
  "normalize-path",
  "util",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
