[package]
name = "blog"
version.workspace = true

edition.workspace = true

[dependencies]
arborium.workspace = true
atom_syndication.workspace = true
axum.workspace = true
chrono.workspace = true
columbo.workspace = true
const_base.workspace = true
const_format.workspace = true
css-minify-macro.workspace = true
futures.workspace = true
http-body-util.workspace = true
maud.workspace = true
miette.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
woothee.workspace = true
