[package]
name = "site-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true

pulldown-cmark = { workspace = true, optional = true }
slug = { version = "0.1.5", optional = true }
# highlight-pulldown = { version = "0.2", optional = true }
syntect = { version = "5", optional = true }
gray_matter = { version = "0.2.6", optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum",
  "dep:pulldown-cmark", "dep:slug", "dep:syntect", "dep:gray_matter",
]

